--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "express": "4.17.1",
     "body-parser": "1.19.0",
-    "pg": "7.12.1"
+    "pg": "7.18.2"
   },
   "devDependencies": {
     "nodemon": "latest",
-    "npm-check-updates": "latest"
+    "npm-check-updates": "latest",
+    "testcontainers": "latest"
   }
 }
