--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "nodebars",
   "version": "0.0.1",
   "scripts": {
-    "start": "node app.js",
-    "dev": "node node_modules/nodemon/bin/nodemon.js app.js",
-    "ncu": "node node_modules/npm-check-updates/bin/ncu -u"
+    "start": "node app.mjs",
+    "dev": "node node_modules/nodemon/bin/nodemon.js app.mjs",
+    "ncu": "node node_modules/npm-check-updates/bin/cli.js -u"
   },
   "engines": {
-    "node": "12.10.0"
+    "node": "14.9.0"
   },
   "dependencies": {
     "express": "4.17.1",
     "body-parser": "1.19.0",
-    "pg": "7.18.2"
+    "pg": "8.3.3"
   },
   "devDependencies": {
     "nodemon": "latest",
